--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
               <archive>
                 <manifest>
                   <addClasspath>true</addClasspath>
-                  <mainClass>com.package.MainClass</mainClass>
+                  <mainClass>com.kffekko_report.main.Main</mainClass>
                 </manifest>
               </archive>
               <descriptorRefs>
@@ -88,6 +88,19 @@
               </descriptorRefs>
             </configuration>
         </plugin> 
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <archive>
+                    <index>true</index>
+                    <manifest>
+                        <mainClass>com.kffekko_report.main.Main</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
     </plugins>
 </build>
 </project>
